--- a/paper/main.tex
+++ b/paper/main.tex
@@ -84,6 +84,7 @@ Acceptance to publication
 \item Computer Methods in Applied Mechanics and Engineering
 \item Journal of Applied Mechanics
 \item International Journal of Mechanical Sciences
+\item Theoretical and Applied Fracture Mechanics
 \item ...
 \end{itemize}
 
