--- a/paper/incl_conclusion.tex
+++ b/paper/incl_conclusion.tex
@@ -12,90 +12,10 @@ Further work: characterisation of bifurcation points, conditions for stability e
 future work: thorough energy blow up and reduction at bifurcation points
 }
 
-...
-%: (i) compute a descent direction $\mathbf{p}_k$ by solving $B_k \mathbf{p}_k = -\nabla f(\mathbf{x}_k)$, (ii) define a one-dimensional function $h(\alpha_k) = f(\mathbf{X}_k + \alpha_k \mathbf{p}_k)$, representing the function value on the descent direction given the step-size, (iii) find an $\alpha_k$ that minimizes $h$ over $\alpha_k \in \mathbb{R}_+$, (iv) set $\mathbf{s}_k = \alpha_k \mathbf{p}_k$ and update $\mathbf{X}_{k+1} = \mathbf{X}_k + \mathbf{s}_k$, (vi) set $\mathbf{y}_k = \nabla f(\mathbf{X}_{k+1}) - \nabla f(\mathbf{X}_k)$, (vii) set $B_{k+1} = B_k + \frac{\mathbf{y}_k \mathbf{y}_k^T}{\mathbf{y}_k^T \mathbf{s}_k} - \frac{B_k \mathbf{s}_k \mathbf{s}_k^T B_k^T}{\mathbf{s}_k^T B_k \mathbf{s}_k}.$
-%Minimizing the energy functionals given in \eqref{modeld}  and \eqref{model_elastic_substrate}.
-%
-% $W = \int_{\Omega_{0}} \phi  d\Omega_{0}$ is accomplished using a variant of conjugate gradient optimization known as the L-BFGS algorithm [98]. This algorithm seeks solutions to the equilibrium equations $\partial W / \partial \mathbf{u}{ij} = \int_{\Omega_{0}} \mathbf{P} \nabla \mathcal{N}_{ij} , d\Omega_{0} = 0$, where $\mathbf{P} = \partial \phi / \partial \boldsymbol{\nabla} \mathbf{y}$ and $\mathcal{N}_{ij}$ is the shape function at node $(ij)$. 
-
-%unknown constants (cubic Hermite interpolation) (Liu and Quek, 2013). This implies that four shape functions were used in each
-%two-node element (4 degrees of freedom), and we utilized a uniform mesh with an element size h𝑒 = 1∕1000. The discrete solution
-%𝑢′(𝑥𝑖) provided at discrete nodes 𝑥𝑖 by AUTO was first interpolated using B-spline basis function of degree 3 (Grimstad and others,
-%2015) and then used to calculate the integral (10) using a three-point Gauss integration scheme; the fixed boundary conditions were
-%imposed by removing from the stiffness matrix 𝐊 the row and columns at 𝑥 = 0 and 𝑥 = 1.
-
-
-
-%\begin{algorithm}
-%\caption{Monolithic minimization of the energy functional in the strain interval $[\bar\epsilon,\bar\epsilon+\delta\bar\epsilon]$}
-%\LinesNumbered
-%\SetAlgoNlRelativeSize{0}
-%\SetNlSty{textbf}{(}{)}
-%\SetAlgoNlRelativeSize{-1}
-%\SetAlgoNlRelativeSize{1}
-%
-%\textbf{}Given ${\bf X}^n = \{{\bf u}^n, \alpha^n \}$ at $\bar\epsilon$ \\
-%\textbf{}Set $\bar\epsilon$ to $\bar\epsilon+\delta\bar\epsilon$, with $\delta\bar\epsilon=10^{-6}$\\
-%\textbf{}Set ${\bf X}^{n,0} \leftarrow {\bf X}^n$, $a \leftarrow 0$
-%
-%\While{$|\Psi_{\text{total}}^{n,a+1} - \Psi_{\text{total}}^{n,a}| \leq \text{TOL} \ll 1$}{
-%    $\min\limits_{{\bf X}^{n,a+1}} \Psi_{\text{internal}}({\bf X}^{n,a+1}$)\;
-%    %subject to $\alpha^{n,a+1} \geq \alpha^n$\;
-%    \textbf{} Set $a \leftarrow a + 1$
-%}
-%\textbf{}Update solution: ${\bf X}^{n+1} \leftarrow {\bf X}^{n,a}$
-%\end{algorithm}
-
-
-%\begin{algorithm}
-%\caption{Monolithic minimization of the energy functional in the strain interval $[\bar\epsilon,\bar\epsilon+\delta\bar\epsilon]$}
-%\LinesNumbered
-%\SetAlgoNlRelativeSize{0}
-%\SetNlSty{textbf}{(}{)}
-%\SetAlgoNlRelativeSize{-1}
-%\SetAlgoNlRelativeSize{1}
-%
-%\textbf{}Given ${\bf X}^n = \{{\bf u}^n, \alpha^n \}$ at $\bar\epsilon$ \\
-%\textbf{}Set $\bar\epsilon$ to $\bar\epsilon+\delta\bar\epsilon$, with $\delta\bar\epsilon=10^{-6}$\\
-%\textbf{}Set ${\bf X}^{n,0} \leftarrow {\bf X}^n$, $a \leftarrow 0$
-%
-%\While{$|\Psi_{\text{total}}^{n,a+1} - \Psi_{\text{total}}^{n,a}| \leq \text{TOL} \ll 1$}{
-%    $\min\limits_{{\bf X}^{n,a+1}} \Psi_{\text{internal}}({\bf X}^{n,a+1}$)\;
-%    subject to $\alpha^{n,a+1} \geq \alpha^n$\;
-%    \textbf{}Set $a \leftarrow a + 1$
-%}
-%\textbf{}Update solution: ${\bf X}^{n+1} \leftarrow {\bf X}^{n,a}$
-%\end{algorithm}
-%
-%\begin{algorithm}
-%\caption{Alternating minimization of the energy functional in the strain interval $[\bar\epsilon,\bar\epsilon+\delta\bar\epsilon]$}
-%\LinesNumbered
-%\SetAlgoNlRelativeSize{0}
-%\SetNlSty{textbf}{(}{)}
-%\SetAlgoNlRelativeSize{-1}
-%\SetAlgoNlRelativeSize{1}
-%
-%\textbf{}Given ${\bf u}^n$, $\alpha^n$ at $\bar\epsilon$ \\
-%\textbf{}Set $\bar\epsilon$ to $\bar\epsilon+\delta\bar\epsilon$, with $\delta\bar\epsilon=10^{-6}$\\
-%\textbf{}Set ${\bf u}^{n,0} \leftarrow {\bf u}^n$, $\alpha^{n,0} \leftarrow \alpha^n$, $a \leftarrow 0$
-%
-%\While{$|\Psi_{\text{total}}^{n,a+1} - \Psi_{\text{total}}^{n,a}| \leq \text{TOL} \ll 1$}{
-%    $\min\limits_{{\bf u}^{n,a+1}} \Psi_{\text{internal}}({\bf u}^{n,a+1}, \alpha^{n,a}$)\;
-%    $\min\limits_{\alpha^{n,a+1}} \Psi_{\text{internal}}({\bf u}^{n,a+1}, \alpha^{n,a+1})$\;
-%    subject to $\alpha^{n,a+1} \geq \alpha^n$\;
-%    \textbf{}Set $a \leftarrow a + 1$
-%}
-%\textbf{}Update solution: ${\bf u}^{n+1} \leftarrow {\bf u}^{n,a}$, $\alpha^{n+1} \leftarrow \alpha^{n,a}$
-%\end{algorithm}
-
-
-
 \paragraph{Figures}
 
 \begin{figure}[htbp]
     \centering
-    % \includegraphics*[width=.45\textwidth]{../images/model_stiff_energy.png}
-    % \includegraphics*[width=.45\textwidth]{../images/model_compliant_energy.png}
     \caption{
         Energy diagram of equilibrium branches in the phase-field model of an elastic bar on stiff (left) and compliant (right) elastic foundation. In the figure, the difference $\Delta \Psi = \Psi(y_t)-\Psi_h$ between the energy of the state $y_t$ on the current branch and the homogeneous solution. Stability of solutions is indicated by colors: blue and orange indicate, respectively, stable and unstable states, by numerical evaluation of the sign of the smallest eigenvalue of the stiffness matrix $\mathbf{K}^1$. According to the local energy minimality protocol, arrows indicate the anticipated branch switching events associated with the loss of stability at load values denoted $\bar \epsilon_j, j \in \mathbb N$, where $j$ indicates the instability mode, cf. Equation~\eqref{}. Letters correspond to the states depicted in Figure XXX.\todo[inline]{maybe change letters into numbers, indicating the number of the mode}%
     }
@@ -137,6 +57,58 @@ future work: thorough energy blow up and reduction at bifurcation points
 \begin{figure}[htbp]
     \centering
     \includegraphics*[width=.45\textwidth]{../images/energy_interpolation-orders.png}
-    \caption{Typical profile of energy slice, interpolations at different orders.}
+    \caption{Typical profile of energy slice, interpolations at different orders. APPENDIX. WEBAPP: COMPILE A PARAMETERS FILE AND HOPE FOR A COMPUTATION. OR USE THE WEBAPP. PAY TO USE "DEFAULT VALUES"==CAREFULLY SELECTED, 1 DEFAULT = 1 ACKNOWLEDGMENT IN THE FINAL PAPER. OUR PIPELINES ARE SLOW, IT MAY TAKE A FEW DAYS TO RUN THE COMPUTATION. WE WILL NOTIFY YOU BY EMAIL. YOU PAY THE NECESSARY RESOURCES. PRICE LINEARLY DECREASES (WITH THE NUMBER OF ACKNOWLEDGMENTS.) PRESSURE EXPONENTIALLY INCREASES, TOWARDS RELEASE.}
     \label{fig:energy-slice}
 \end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics*[width=.45\textwidth]{../images/irreversibility_inf_eig.png}
+    \caption{The right solver should'nt give you a crack.
+    SECOND ORDER ANALYSIS OF THE HOMOGENEOUS SOLUTIONS. UNIQUENESS, LOSS OF UNIQUENESS, STABILITY. NOTICE THAT THE STABILITY-OBSERVABLE (MARKER) IS \emph{DISCONTINUOUS}.
+    % (THE MARKET SHOUDN'T GIVE YOU A CRACK. THE MARKET DOESN'T GIVE A FUCK.) 
+    }
+    \label{fig:shouldnt}
+\end{figure}
+
+We have compared the performance of the algorithm proposed in this paper with aN EXPERIMENTAL continuation method, DEFINED AS FOLLOWS. 
+
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics*[width=.7\textwidth]{../images/VSA*.png}
+    \caption{STABILITY (DIS)CONTNIUATION ALGORITHM}
+    \label{fig:shouldnt}
+\end{figure}
+
+AS WE HAVE SEEN, SOLUTIONS TO XXX (The former) exhibit SENSITIVITY TO numerical bifurcation artifacts, while SOLUTIONS TO [DEF], consistently maintain the THE OBSERVABILITY OF homogeneous solution.
+
+In Figure~\ref{fig:shouldnt}, we EXHIBIT THE CONSEQUENCES OF a NUMERICAL EFFECTS that emphasiSes the role of the irreversibility constraint in our STABILITY-DRIVEN optimiSation approach. THE NUMERICAL SETTING IS THAT OF THE FIRST the PART OF THE paper, where OSCILLATIONS AROUND the homogeneous solution WERE INVESTIGATED AS THE RESULTS OF A BIFURCATION ANALYSIS. Specifically, DESPITE slight numerical fluctuations MANIFESTING AS wavy (SINUSOIDAL) patternS, AND DESPITE THAT THE INF-EIG-CONE EVOLVES DISCONTINUOUSLY, the homogeneous solution IS INDEED stable AND SHOULD BE OBSERVED.
+
+IN FACT, Applying a standard Newton-Raphson monolithic solver to this  wavy-PERTURBED TEST solutionS, the expected nucleation of cracks does not occur, WHICH IS IN AGREEMENT TO THE STATEMENT IN [DEF]. This lack of crack nucleation contrasts with our NUMERICAL RESULTS OBTAINED using the conjugate gradient method combined with an active-set irreversibility approach. To the best of our knowledge, this discrepancy is aN INTERESTING numerical artifact rather than a physical phenomenon.
+
+This numerical PERTURBATION, which arises due to the use of quasi-Newton methods and (conjugate) gradients (HENCE, NOT HESSIANS), introduces non-physical crack nucleation under GENERAL conditions. This is an important observation, highlighting that the stability of the solutionS (HERE, THE homogeneous) should be THOROUGHLY INVESTIGATED. AND preserved AS OBSERVABLE, under increasing load, assuming no nucleation should occur if only physical factors - ENCAPSULATED IN OUR STABILITY STATEMENT / EVOLUTION LAW - are considered.
+
+We present two main options for discussing these CONSIDERATIONS IN VIEW OF THE importance of using accurate and robust algorithms.
+
+\begin{itemize}
+    \item 
+    Ignore the Numerical Artifact: focusSING solely on FIRST ORDER CONSIDERATIONS and acknowledgING that the observed COMPUTED nucleationS MAY BE purely numerical and should not be considered in physical terms.
+    \item 
+    Highlight the Numerical Artifact: Alternatively, EMPHASISING that HOMOGENEOUS SOLUTIONS SHOULD BE OBSERVABLE, DESPITE 
+    THE SENSITIVITY TO numerical PARAMETERS (artifacts) (IN the quasi-Newton approach) AS WELL AS THE ABUNDANCE OF NON-PHYSICAL SOLUTIONS (IN THE NONCONVEX SCENARIO).
+    \item 
+    OTHERWISE.
+\end{itemize}
+
+
+We SUGGEST that such artifacts should be carefully interpreted, IN VIEW OF CONNECTION BETWEEN OBSERVABILITY AND STABILITY, AS STEP TO UNDERSTANDING COMPLEX PATTERNS THAT EMERGE, E.G., IN HIGHER DIMENSIONS OR IN OTHER DOMAINS.
+
+In either case, our COMPUTATIONS (KE) SHOW THAT, UNLESS SECOND ORDER ANALYSIS IS PERFORMED, THE observed nucleation is not indicative of physical crackS but rather OF AN INTERPLAY BETWEEN PURELY PHISICAL PHENOMENA, INHERENT TO THE NATURE OF NATURAL PROCESSES, AND of numerical BIASES inherent to the COMPUTATIONAL methods employed. This distinction is crucial for understanding the limitations and proper application of numerical techniques AS PREDICTIVE TOOLS IN CONTEXTS WHERE CRACKS ARE A REAL CONCERN FOR STRUCTURAL CONSIDERATIONS.
+
+Future work will include a more detailed exploration of these algorithms and their IMPLEMENTATION for stability analysis OF APPLICATIONS IN THIN FILM FRACTURE, SUCH AS IN ARTISTIC PAINTINGS, AND FOR THE STABILITY OF THE CRYOSPHERE.
+
+-------
+
+The EVIDENCE IS that certain numerical methods can introduce non-physical artifacts which should be distinguished from genuine physical phenomena. Our ongoing work, NAVIGATING LOCAL MINIMA RELYING SOLELY ON A STATEMENT OF STABILITY, aims to refine these techniques and provide more reliable algorithms for analySing irreversible evolutions in variational problems AND GAMES.
+
